--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/static/css/uikit.gradient.min.css">
     <script src='/static/js/jquery.min.js'></script>
     <script src='/static/js/uikit.min.js'></script>
+    <script src='/static/js/awesome.js'></script>
     {% block beforehead %}<!-- before head  -->{% endblock %}
 </head>
 <body>
@@ -43,6 +44,9 @@
                         <a href="#0"><i class="uk-icon-user"></i> {{ __user__.name }}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
+                                {% if __user__.admin %}
+                                <li><a href="/manage/blogs/create"><i class="uk-icon-pencil"></i> 编辑日志</a></li>
+                                {% endif %}
                                 <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
                             </ul>
                         </div>
