--- a/www/templates/blogs.html
+++ b/www/templates/blogs.html
@@ -5,22 +5,45 @@
 {% block beforehead %}
 
 <script>
+    function initVM(data) {
+        var vm = new Vue({
+            el: '#vm',
+            data: {
+                blogs: data.blogs,
+                page: data.page
+            }
+        });
+        $('#vm').show();
+    }
+
+    $(function () {
+        getJSON('/api/blogs', {
+            page: {{ page_index }}
+        }, function (err, results) {
+            if (err) {
+                return fatal(err);
+            }
+            $('#loading').hide();
+            initVM(results);
+        });
+    });
 </script>
 
 {% endblock %}
 
 {% block content %}
 
-    <div class="uk-width-medium-3-4">
-    {% for blog in blogs %}
-        <article class="uk-article">
-            <h2><a href="/blog/{{ blog.id }}">{{ blog.name }}</a></h2>
-            <p class="uk-article-meta">发表于{{ blog.created_at|datetime }}</p>
-            <p>{{ blog.summary }}</p>
-            <p><a href="/blog/{{ blog.id }}">继续阅读 <i class="uk-icon-angle-double-right"></i></a></p>
-        </article>
-        <hr class="uk-article-divider">
-    {% endfor %}
+    <div id="vm" class="uk-width-medium-3-4">
+        <div v-for="blog in blogs">
+            <article class="uk-article">
+                <h2><a :href="'/blog/'+ blog.id" v-text="blog.name"></a></h2>
+                <p class="uk-article-meta" v-text="'发表于'+ toSmartDate(blog.created_at*1000)"></p>
+                <p v-text="blog.summary"></p>
+                <p><a :href="'/blog/'+ blog.id">继续阅读 <i class="uk-icon-angle-double-right"></i></a></p>
+            </article>
+            <hr class="uk-article-divider">
+        </div>
+        <pagination :page="page"></pagination>
     </div>
 
     <div class="uk-width-medium-1-4">
